--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "4.7.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@capacitor/android": "4.8.1",
     "@capacitor/cli": "^4.7.0",
-    "@capacitor/core": "^4.7.0",
-    "@ionic/cli": "^6.20.8",
+    "@capacitor/core": "^4.7.3",
+    "@ionic/cli": "^7.0.1",
+    "@ionic/core": "^7.0.2",
+    "@ionic/react": "^7.0.2",
+    "nosleep.js": "^0.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
